--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "istream": "cpp",
         "cstddef": "cpp",
         "type_traits": "cpp",
-        "system_error": "cpp"
+        "system_error": "cpp",
+        "bitset": "cpp"
     }
 }
